DBC22-2071: Fix for swap button position on mobile landscape

--- a/src/frontend/src/Components/map/Map.scss
+++ b/src/frontend/src/Components/map/Map.scss
@@ -184,7 +184,7 @@
 
       .routing-outer-container {
         @media (orientation: landscape) and (max-width: 767px) {
-          width: calc(340px + 1rem);
+          width: fit-content;
         }
       }
 
